--- a/code/eai/index.html
+++ b/code/eai/index.html
@@ -9,7 +9,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="description" content="Mr. Farmer at the University of Chicago" />
 	<title>Jesse E. I. Farmer - Code - EAI</title>
-	<link rel="stylesheet" type="text/css" href="/~farmerje/farmerje.css" />
+	<link rel="stylesheet" type="text/css" href="/farmerje.css" />
 </head>
 <body>
 <div id="page">
@@ -17,18 +17,18 @@
 <div id="header">
 <h1>Jesse E. I. Farmer</h1>
 <a href="http://www.uchicago.edu">University of Chicago</a>
-<img src="/~farmerje/img/header.png" alt="Phoenix" />
+<img src="/img/header.png" alt="Phoenix" />
 </div>
 
 <div id="navigation">
 <ul>
-<li class="first"><a href="/~farmerje/index.shtml">Home</a></li>
-<li><a href="/~farmerje/math">Math</a></li>
-<li><a href="/~farmerje/code">Code</a></li>
-<li><a href="/~farmerje/tutorials">Tutorials</a></li>
-<li><a href="/~farmerje/latex">LaTeX</a></li>
-<li><a href="/~farmerje/linux">Linux</a></li>
-<li><a href="/~farmerje/resume.pdf">Resumé</a></li>
+<li class="first"><a href="/index.shtml">Home</a></li>
+<li><a href="/math">Math</a></li>
+<li><a href="/code">Code</a></li>
+<li><a href="/tutorials">Tutorials</a></li>
+<li><a href="/latex">LaTeX</a></li>
+<li><a href="/linux">Linux</a></li>
+<li><a href="/resume.pdf">Resumé</a></li>
 </ul>
 </div>
 
@@ -37,7 +37,7 @@
 
 <h2>suffixes</h2>
 <ul>
-<li><a href="eai-1.0.0.tar.bz2">Download source</a></li>
+<li><a href="/eai-1.0.0.tar.bz2">Download source</a></li>
 <li><a href="#description">Description</a></li>
 <li><a href="#installation">Installation</a></li>
 <li><a href="#usage">Usage</a></li>
@@ -65,7 +65,7 @@ See the README file contained in the above source file.
 <a name="technical"></a>
 <h3>Technical details</h3>
 <p>
-Why, if you're really curious, read the <a href="/~farmerje/math/CMSC351/report.pdf">report</a>.
+Why, if you're really curious, read the <a href="/math/CMSC351/report.pdf">report</a>.
 </p>
 </div>
 
@@ -73,8 +73,8 @@ Why, if you're really curious, read the <a href="/~farmerje/math/CMSC351/report.
 Copyright &copy; <a href="mailto&#058;farmerje&#064;uchicago&#046;edu">Jesse E.I. Farmer</a>, 2005-2006
 
 <div class="updated">Last updated: 08 May 2006</div>
-<img src="/~farmerje/img/xhtml.png" alt="Valid xhtml 1.0" />
-<img src="/~farmerje/img/css.png" alt="Valid CSS" />
+<img src="/img/xhtml.png" alt="Valid xhtml 1.0" />
+<img src="/img/css.png" alt="Valid CSS" />
 </div>
 
 </div>
@@ -87,4 +87,3 @@ urchinTracker();
 </script>
 </body>
 </html>
-
