--- a/math/index.html
+++ b/math/index.html
@@ -9,7 +9,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="description" content="Mr. Farmer at the University of Chicago" />
 	<title>Jesse E. I. Farmer - Math</title>
-	<link rel="stylesheet" type="text/css" href="/~farmerje/farmerje.css" />
+	<link rel="stylesheet" type="text/css" href="../farmerje.css" />
 </head>
 <body>
 <div id="page">
@@ -17,18 +17,18 @@
 <div id="header">
 <h1>Jesse E. I. Farmer</h1>
 <a href="http://www.uchicago.edu">University of Chicago</a>
-<img src="/~farmerje/img/header.png" alt="Phoenix" />
+<img src="../img/header.png" alt="Phoenix" />
 </div>
 
 <div id="navigation">
 <ul>
-<li class="first"><a href="/~farmerje/index.shtml">Home</a></li>
-<li><a href="/~farmerje/math">Math</a></li>
-<li><a href="/~farmerje/code">Code</a></li>
-<li><a href="/~farmerje/tutorials">Tutorials</a></li>
-<li><a href="/~farmerje/latex">LaTeX</a></li>
-<li><a href="/~farmerje/linux">Linux</a></li>
-<li><a href="/~farmerje/resume.pdf">Resumé</a></li>
+<li class="first"><li><a href="/">Home</a></li>
+<li><a href="/math">Math</a></li>
+<li><a href="/code">Code</a></li>
+<li><a href="/tutorials">Tutorials</a></li>
+<li><a href="/latex">LaTeX</a></li>
+<li><a href="/linux">Linux</a></li>
+<li><a href="/resume.pdf">Resumé</a></li>
 </ul>
 </div>
 
@@ -45,16 +45,16 @@ This page isn't designed to facilitate cheating, though I'm sure Professor Sally
 </p>
 
 <ul>
-<li><a href="MATH207">MATH 20700</a> (Honors Analysis in <b>R</b><sup>n</sup> - I)</li>
-<li><a href="MATH208">MATH 20800</a> (Honors Analysis in <b>R</b><sup>n</sup> - II)</li>
-<li><a href="MATH209">MATH 20900</a> (Honors Analysis in <b>R</b><sup>n</sup> - III)</li>
-<li><a href="MATH257">MATH 25700</a> (Honors Algebra - I)</li>
-<li><a href="MATH258">MATH 25800</a> (Honors Algebra - II)</li>
-<li><a href="MATH259">MATH 25900</a> (Honors Algebra - III)</li>
-<li><a href="MATH262">MATH 26200</a> (Point-Set Topology)</li>
-<li><a href="MATH263">MATH 26300</a> (Algebraic Topology)</li>
-<li><a href="MATH270">MATH 27000</a> (Basic Complex Variables)</li>
-<li><a href="CMSC277">CMSC 27700</a> (Mathematical Logic I)</li>
+<li><a href="/MATH207">MATH 20700</a> (Honors Analysis in <b>R</b><sup>n</sup> - I)</li>
+<li><a href="/MATH208">MATH 20800</a> (Honors Analysis in <b>R</b><sup>n</sup> - II)</li>
+<li><a href="/MATH209">MATH 20900</a> (Honors Analysis in <b>R</b><sup>n</sup> - III)</li>
+<li><a href="/MATH257">MATH 25700</a> (Honors Algebra - I)</li>
+<li><a href="/MATH258">MATH 25800</a> (Honors Algebra - II)</li>
+<li><a href="/MATH259">MATH 25900</a> (Honors Algebra - III)</li>
+<li><a href="/MATH262">MATH 26200</a> (Point-Set Topology)</li>
+<li><a href="/MATH263">MATH 26300</a> (Algebraic Topology)</li>
+<li><a href="/MATH270">MATH 27000</a> (Basic Complex Variables)</li>
+<li><a href="/CMSC277">CMSC 27700</a> (Mathematical Logic I)</li>
 </ul>
 
 <h2>Textbooks</h2>
@@ -66,7 +66,7 @@ This page isn't designed to facilitate cheating, though I'm sure Professor Sally
 	<i>Principles of Mathematical Analysis</i></a> by Walter Rudin
 	<br />
 	<a href="http://www.amazon.com/exec/obidos/tg/detail/-/0486612260/qid=1107986405/sr=1-1/ref=sr_1_1/002-8995781-7556060?v=glance&amp;s=books">
-	<i>Introductory Real Analysis</i></a> by A.N. Kolmogorov and S.V. Fomin 
+	<i>Introductory Real Analysis</i></a> by A.N. Kolmogorov and S.V. Fomin
 	<br />
 	<a href="http://www.amazon.com/exec/obidos/tg/detail/-/0486683362/qid=1107986474/sr=1-1/ref=sr_1_1/002-8995781-7556060?v=glance&amp;s=books">
 	<i>Advanced Calculus of Several Variables</i></a> by C.H. Edwards, Jr.
@@ -116,8 +116,8 @@ If I had to evaluate these textbooks, I'd give high marks to the Kolmogorov and 
 Copyright &copy; <a href="mailto&#058;farmerje&#064;uchicago&#046;edu">Jesse E.I. Farmer</a>, 2005-2006
 
 <div class="updated">Last updated: 13 May 2006</div>
-<img src="/~farmerje/img/xhtml.png" alt="Valid xhtml 1.0" />
-<img src="/~farmerje/img/css.png" alt="Valid CSS" />
+<img src="../img/xhtml.png" alt="Valid xhtml 1.0" />
+<img src="../img/css.png" alt="Valid CSS" />
 </div>
 
 </div>
@@ -130,4 +130,3 @@ urchinTracker();
 </script>
 </body>
 </html>
-
