--- a/latex/index.html
+++ b/latex/index.html
@@ -9,7 +9,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="description" content="Mr. Farmer at the University of Chicago" />
 	<title>Jesse E. I. Farmer - LaTeX</title>
-	<link rel="stylesheet" type="text/css" href="/~farmerje/farmerje.css" />
+	<link rel="stylesheet" type="text/css" href="/farmerje.css" />
 </head>
 <body>
 <div id="page">
@@ -17,18 +17,18 @@
 <div id="header">
 <h1>Jesse E. I. Farmer</h1>
 <a href="http://www.uchicago.edu">University of Chicago</a>
-<img src="/~farmerje/img/header.png" alt="Phoenix" />
+<img src="/img/header.png" alt="Phoenix" />
 </div>
 
 <div id="navigation">
 <ul>
-<li class="first"><a href="/~farmerje/index.shtml">Home</a></li>
-<li><a href="/~farmerje/math">Math</a></li>
-<li><a href="/~farmerje/code">Code</a></li>
-<li><a href="/~farmerje/tutorials">Tutorials</a></li>
-<li><a href="/~farmerje/latex">LaTeX</a></li>
-<li><a href="/~farmerje/linux">Linux</a></li>
-<li><a href="/~farmerje/resume.pdf">Resumé</a></li>
+<li class="first"><a href="/index.shtml">Home</a></li>
+<li><a href="/math">Math</a></li>
+<li><a href="/code">Code</a></li>
+<li><a href="/tutorials">Tutorials</a></li>
+<li><a href="/latex">LaTeX</a></li>
+<li><a href="/linux">Linux</a></li>
+<li><a href="/resume.pdf">Resumé</a></li>
 </ul>
 </div>
 
@@ -36,13 +36,13 @@
 
 <h2>LaTeX</h2>
 <p>
-<a href="http://www.latex-project.org">LaTeX</a> is an extension of Donald Knuth's <i>TeX</i> typesetting language which allows one to produce logically organized, print-quality documents with relative ease.  It's the <i>de facto</i> standard for publication in the scientific and mathematics community.  LaTeX is how your professor produces nice-looking handouts for class, or generates a PDF of your calculus homework solutions.  
+<a href="http://www.latex-project.org">LaTeX</a> is an extension of Donald Knuth's <i>TeX</i> typesetting language which allows one to produce logically organized, print-quality documents with relative ease.  It's the <i>de facto</i> standard for publication in the scientific and mathematics community.  LaTeX is how your professor produces nice-looking handouts for class, or generates a PDF of your calculus homework solutions.
 </p>
 <p>
 As a student I use LaTeX to typeset all my homework.  This has several advantages.  First, it just looks nicer.  I've seen people try to do math homework in Microsoft Word &mdash; I wouldn't subject anyone to something <i>that</i> painful, especially for such poor-looking results.  Second, it allows me to archive all my past homework on my computer for easy searching and reference.  If I want to quickly find a proof of the <a href="http://mathworld.wolfram.com/UniformBoundednessPrinciple.html">Banach-Steinhaus Theorem</a> then I know right where to look.  If I get assigned the same homework problem twice in different classes (which happens with surprising regularity) then I just have to copy and paste the solution.  In the short-term it requires a bit of work, but it saves me a lot of effort in the long-run.  Third, if you continue with mathematics or science, you're probably going to be expected to learn LaTeX at some point.  Why not start now?
 </p>
 <p>
-If you're just beginning with LaTeX then there are plenty of resources on the internet.  I recommend the <a href="http://www.maths.tcd.ie/~dwilkins/LaTeXPrimer/">LaTeX primer</a> and the <a href="http://www.tug.org.in/tutorials.html">Online tutorials for LaTeX</a>.  You can find plenty more by searching Google.  You might also want to look at the <a href="/~farmerje/math">math section</a> of this page.  I include the LaTeX source files for all my homework assignments, and examples are probably the easiest way to get started so long as they're good examples.  The idea behind LaTeX is to allow you to type the <i>logical</i> structure of your document and leave the precise formatting details of your document to the LaTeX processor.  This is fundamentally different than tools like Microsoft Word, where basically all the decisions you make about your document relate to formatting, e.g., what font sizes to use, where to italicize what, and so on.
+If you're just beginning with LaTeX then there are plenty of resources on the internet.  I recommend the <a href="http://www.maths.tcd.ie/~dwilkins/LaTeXPrimer/">LaTeX primer</a> and the <a href="http://www.tug.org.in/tutorials.html">Online tutorials for LaTeX</a>.  You can find plenty more by searching Google.  You might also want to look at the <a href="/math">math section</a> of this page.  I include the LaTeX source files for all my homework assignments, and examples are probably the easiest way to get started so long as they're good examples.  The idea behind LaTeX is to allow you to type the <i>logical</i> structure of your document and leave the precise formatting details of your document to the LaTeX processor.  This is fundamentally different than tools like Microsoft Word, where basically all the decisions you make about your document relate to formatting, e.g., what font sizes to use, where to italicize what, and so on.
 </p>
 
 <p>
@@ -54,8 +54,8 @@ I also have my very own <a href="homework.sty">homework.sty</a> file which conta
 Copyright &copy; <a href="mailto&#058;farmerje&#064;uchicago&#046;edu">Jesse E.I. Farmer</a>, 2005-2006
 
 <div class="updated">Last updated: 08 May 2006</div>
-<img src="/~farmerje/img/xhtml.png" alt="Valid xhtml 1.0" />
-<img src="/~farmerje/img/css.png" alt="Valid CSS" />
+<img src="/img/xhtml.png" alt="Valid xhtml 1.0" />
+<img src="/img/css.png" alt="Valid CSS" />
 </div>
 
 </div>
@@ -68,4 +68,3 @@ urchinTracker();
 </script>
 </body>
 </html>
-
