--- a/linux/index.html
+++ b/linux/index.html
@@ -9,7 +9,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="description" content="Mr. Farmer at the University of Chicago" />
 	<title>Jesse E. I. Farmer - Linux</title>
-	<link rel="stylesheet" type="text/css" href="/~farmerje/farmerje.css" />
+	<link rel="stylesheet" type="text/css" href="/farmerje.css" />
 </head>
 <body>
 <div id="page">
@@ -17,18 +17,18 @@
 <div id="header">
 <h1>Jesse E. I. Farmer</h1>
 <a href="http://www.uchicago.edu">University of Chicago</a>
-<img src="/~farmerje/img/header.png" alt="Phoenix" />
+<img src="/img/header.png" alt="Phoenix" />
 </div>
 
 <div id="navigation">
 <ul>
-<li class="first"><a href="/~farmerje/index.shtml">Home</a></li>
-<li><a href="/~farmerje/math">Math</a></li>
-<li><a href="/~farmerje/code">Code</a></li>
-<li><a href="/~farmerje/tutorials">Tutorials</a></li>
-<li><a href="/~farmerje/latex">LaTeX</a></li>
-<li><a href="/~farmerje/linux">Linux</a></li>
-<li><a href="/~farmerje/resume.pdf">Resumé</a></li>
+<li class="first"><a href="/index.shtml">Home</a></li>
+<li><a href="/math">Math</a></li>
+<li><a href="/code">Code</a></li>
+<li><a href="/tutorials">Tutorials</a></li>
+<li><a href="/latex">LaTeX</a></li>
+<li><a href="/linux">Linux</a></li>
+<li><a href="/resume.pdf">Resumé</a></li>
 </ul>
 </div>
 
@@ -44,7 +44,7 @@ Linux is a free (in both senses of the word) operating system, and it's the one 
 Yep, sometimes I make themes for the various pieces of software I use or have used.  There's no reason not to share them, so here they are.
 </p>
 <ul>
-<li><a href="fluxbox.shtml">Fluxbox styles</a></li>
+<li><a href="/fluxbox.shtml">Fluxbox styles</a></li>
 </ul>
 </div>
 
@@ -52,8 +52,8 @@ Yep, sometimes I make themes for the various pieces of software I use or have us
 Copyright &copy; <a href="mailto&#058;farmerje&#064;uchicago&#046;edu">Jesse E.I. Farmer</a>, 2005-2006
 
 <div class="updated">Last updated: 08 May 2006</div>
-<img src="/~farmerje/img/xhtml.png" alt="Valid xhtml 1.0" />
-<img src="/~farmerje/img/css.png" alt="Valid CSS" />
+<img src="/img/xhtml.png" alt="Valid xhtml 1.0" />
+<img src="/img/css.png" alt="Valid CSS" />
 </div>
 
 </div>
@@ -66,4 +66,3 @@ urchinTracker();
 </script>
 </body>
 </html>
-
