--- a/math/MATH258/index.html
+++ b/math/MATH258/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <HTML>
  <HEAD>
-  <TITLE>Index of /~farmerje/math/MATH258</TITLE>
+  <TITLE>Index of math/MATH258</TITLE>
  </HEAD>
  <BODY>
-<H1>Index of /~farmerje/math/MATH258</H1>
+<H1>Index of math/MATH258</H1>
 <PRE><IMG SRC="/icons/blank.gif" ALT="     "> <A HREF="?N=D">Name</A>                    <A HREF="?M=A">Last modified</A>       <A HREF="?S=A">Size</A>  <A HREF="?D=A">Description</A>
 <HR>
-<IMG SRC="/icons/back.gif" ALT="[DIR]"> <A HREF="/~farmerje/math/">Parent Directory</A>        13-May-2006 21:12      -  
-<IMG SRC="/icons/layout.gif" ALT="[   ]"> <A HREF="2005-01-12-hw.pdf">2005-01-12-hw.pdf</A>       07-May-2006 21:34    81k  
-<IMG SRC="/icons/tex.gif" ALT="[   ]"> <A HREF="2005-01-12-hw.tex">2005-01-12-hw.tex</A>       07-May-2006 21:34    10k  
-<IMG SRC="/icons/layout.gif" ALT="[   ]"> <A HREF="2005-01-19-hw.pdf">2005-01-19-hw.pdf</A>       07-May-2006 21:34    86k  
-<IMG SRC="/icons/tex.gif" ALT="[   ]"> <A HREF="2005-01-19-hw.tex">2005-01-19-hw.tex</A>       07-May-2006 21:34    12k  
-<IMG SRC="/icons/layout.gif" ALT="[   ]"> <A HREF="2005-01-26-hw.pdf">2005-01-26-hw.pdf</A>       07-May-2006 21:34    86k  
-<IMG SRC="/icons/tex.gif" ALT="[   ]"> <A HREF="2005-01-26-hw.tex">2005-01-26-hw.tex</A>       07-May-2006 21:34    12k  
-<IMG SRC="/icons/layout.gif" ALT="[   ]"> <A HREF="2005-02-02-hw.pdf">2005-02-02-hw.pdf</A>       07-May-2006 21:34    92k  
-<IMG SRC="/icons/tex.gif" ALT="[   ]"> <A HREF="2005-02-02-hw.tex">2005-02-02-hw.tex</A>       07-May-2006 21:34     9k  
-<IMG SRC="/icons/layout.gif" ALT="[   ]"> <A HREF="2005-02-09-hw.pdf">2005-02-09-hw.pdf</A>       07-May-2006 21:34    83k  
-<IMG SRC="/icons/tex.gif" ALT="[   ]"> <A HREF="2005-02-09-hw.tex">2005-02-09-hw.tex</A>       07-May-2006 21:34    10k  
-<IMG SRC="/icons/layout.gif" ALT="[   ]"> <A HREF="2005-02-16-hw.pdf">2005-02-16-hw.pdf</A>       07-May-2006 21:34    73k  
-<IMG SRC="/icons/tex.gif" ALT="[   ]"> <A HREF="2005-02-16-hw.tex">2005-02-16-hw.tex</A>       07-May-2006 21:34     7k  
-<IMG SRC="/icons/layout.gif" ALT="[   ]"> <A HREF="2005-02-23-hw.pdf">2005-02-23-hw.pdf</A>       07-May-2006 21:34    86k  
-<IMG SRC="/icons/tex.gif" ALT="[   ]"> <A HREF="2005-02-23-hw.tex">2005-02-23-hw.tex</A>       07-May-2006 21:34    11k  
-<IMG SRC="/icons/layout.gif" ALT="[   ]"> <A HREF="2005-03-02-hw.pdf">2005-03-02-hw.pdf</A>       07-May-2006 21:34    78k  
-<IMG SRC="/icons/tex.gif" ALT="[   ]"> <A HREF="2005-03-02-hw.tex">2005-03-02-hw.tex</A>       07-May-2006 21:34    11k  
-<IMG SRC="/icons/layout.gif" ALT="[   ]"> <A HREF="2005-03-09-hw.pdf">2005-03-09-hw.pdf</A>       07-May-2006 21:34    96k  
-<IMG SRC="/icons/tex.gif" ALT="[   ]"> <A HREF="2005-03-09-hw.tex">2005-03-09-hw.tex</A>       07-May-2006 21:34    12k  
+<IMG SRC="/icons/back.gif" ALT="[DIR]"> <A HREF="math/">Parent Directory</A>        13-May-2006 21:12      -
+<IMG SRC="/icons/layout.gif" ALT="[   ]"> <A HREF="2005-01-12-hw.pdf">2005-01-12-hw.pdf</A>       07-May-2006 21:34    81k
+<IMG SRC="/icons/tex.gif" ALT="[   ]"> <A HREF="2005-01-12-hw.tex">2005-01-12-hw.tex</A>       07-May-2006 21:34    10k
+<IMG SRC="/icons/layout.gif" ALT="[   ]"> <A HREF="2005-01-19-hw.pdf">2005-01-19-hw.pdf</A>       07-May-2006 21:34    86k
+<IMG SRC="/icons/tex.gif" ALT="[   ]"> <A HREF="2005-01-19-hw.tex">2005-01-19-hw.tex</A>       07-May-2006 21:34    12k
+<IMG SRC="/icons/layout.gif" ALT="[   ]"> <A HREF="2005-01-26-hw.pdf">2005-01-26-hw.pdf</A>       07-May-2006 21:34    86k
+<IMG SRC="/icons/tex.gif" ALT="[   ]"> <A HREF="2005-01-26-hw.tex">2005-01-26-hw.tex</A>       07-May-2006 21:34    12k
+<IMG SRC="/icons/layout.gif" ALT="[   ]"> <A HREF="2005-02-02-hw.pdf">2005-02-02-hw.pdf</A>       07-May-2006 21:34    92k
+<IMG SRC="/icons/tex.gif" ALT="[   ]"> <A HREF="2005-02-02-hw.tex">2005-02-02-hw.tex</A>       07-May-2006 21:34     9k
+<IMG SRC="/icons/layout.gif" ALT="[   ]"> <A HREF="2005-02-09-hw.pdf">2005-02-09-hw.pdf</A>       07-May-2006 21:34    83k
+<IMG SRC="/icons/tex.gif" ALT="[   ]"> <A HREF="2005-02-09-hw.tex">2005-02-09-hw.tex</A>       07-May-2006 21:34    10k
+<IMG SRC="/icons/layout.gif" ALT="[   ]"> <A HREF="2005-02-16-hw.pdf">2005-02-16-hw.pdf</A>       07-May-2006 21:34    73k
+<IMG SRC="/icons/tex.gif" ALT="[   ]"> <A HREF="2005-02-16-hw.tex">2005-02-16-hw.tex</A>       07-May-2006 21:34     7k
+<IMG SRC="/icons/layout.gif" ALT="[   ]"> <A HREF="2005-02-23-hw.pdf">2005-02-23-hw.pdf</A>       07-May-2006 21:34    86k
+<IMG SRC="/icons/tex.gif" ALT="[   ]"> <A HREF="2005-02-23-hw.tex">2005-02-23-hw.tex</A>       07-May-2006 21:34    11k
+<IMG SRC="/icons/layout.gif" ALT="[   ]"> <A HREF="2005-03-02-hw.pdf">2005-03-02-hw.pdf</A>       07-May-2006 21:34    78k
+<IMG SRC="/icons/tex.gif" ALT="[   ]"> <A HREF="2005-03-02-hw.tex">2005-03-02-hw.tex</A>       07-May-2006 21:34    11k
+<IMG SRC="/icons/layout.gif" ALT="[   ]"> <A HREF="2005-03-09-hw.pdf">2005-03-09-hw.pdf</A>       07-May-2006 21:34    96k
+<IMG SRC="/icons/tex.gif" ALT="[   ]"> <A HREF="2005-03-09-hw.tex">2005-03-09-hw.tex</A>       07-May-2006 21:34    12k
 </PRE><HR>
 <ADDRESS>Apache/1.3.27 Server at home.uchicago.edu Port 80</ADDRESS>
 </BODY></HTML>
