--- a/code/suffixes/index.html
+++ b/code/suffixes/index.html
@@ -22,7 +22,7 @@
 
 <div id="navigation">
 <ul>
-<li class="first"><a href="/index.shtml">Home</a></li>
+<li class="first"><a href="/">Home</a></li>
 <li><a href="/math">Math</a></li>
 <li><a href="/code">Code</a></li>
 <li><a href="/tutorials">Tutorials</a></li>
