--- a/tutorials/rsync-manage.html
+++ b/tutorials/rsync-manage.html
@@ -102,7 +102,7 @@ You can read the <tt>rsync</tt> <a href="http://manpage.org/cgi-bin/man/man2html
 </p>
 
 <p>
-Of course, if you use this script you should change <tt>USERNAME</tt>, <tt>LOCAL_DIR</tt>, and <tt>HOST</tt> to whatever is appropriate for you.  What I find particularly useful is using this in conjunction with my <a href="harper-passwordless.shtml">passwordless logins to harper</a> tip, which makes updating painless.  In fact, using this trick, one could schedule a task or cronjob to silently update your website, or websites, every night.  You wouldn't even have to worry about uploading files yourself any longer!
+Of course, if you use this script you should change <tt>USERNAME</tt>, <tt>LOCAL_DIR</tt>, and <tt>HOST</tt> to whatever is appropriate for you.  What I find particularly useful is using this in conjunction with my <a href="harper-passwordless.html">passwordless logins to harper</a> tip, which makes updating painless.  In fact, using this trick, one could schedule a task or cronjob to silently update your website, or websites, every night.  You wouldn't even have to worry about uploading files yourself any longer!
 </p>
 </div>
 
