Fix relative links

--- a/code/suffixes/index.html
+++ b/code/suffixes/index.html
@@ -37,7 +37,7 @@
 
 <h2>suffixes</h2>
 <ul>
-<li><a href="suffixes-1.0.0.tar.bz2">Download source</a></li>
+<li><a href="./suffixes-1.0.0.tar.bz2">Download source</a></li>
 <li><a href="#description">Description</a></li>
 <li><a href="#installation">Installation</a></li>
 <li><a href="#usage">Usage</a></li>
