--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
 <div id="header">
 <h1>Jesse E. I. Farmer</h1>
 <a href="http://www.uchicago.edu">University of Chicago</a>
-<img src="img/header.png" alt="Phoenix" />
+<img src="/img/header.png" alt="Phoenix" />
 </div>
 
 <div id="navigation">
 <ul>
-<li class="first"><a href="index.html">Home</a></li>
-<li><a href="/math/index.html">Math</a></li>
-<li><a href="/code/index.html">Code</a></li>
-<li><a href="/tutorials/index.html">Tutorials</a></li>
-<li><a href="/latex/index.html">LaTeX</a></li>
-<li><a href="/linux/index.html">Linux</a></li>
+<li class="first"><a href="/">Home</a></li>
+<li><a href="/math">Math</a></li>
+<li><a href="/code">Code</a></li>
+<li><a href="/tutorials">Tutorials</a></li>
+<li><a href="/latex">LaTeX</a></li>
+<li><a href="/linux">Linux</a></li>
 <li><a href="/resume.pdf">Resumé</a></li>
 </ul>
 </div>
@@ -51,8 +51,8 @@ Feel free to look around.  You can browse the main sections of this site by clic
 Copyright &copy; <a href="mailto&#058;farmerje&#064;uchicago&#046;edu">Jesse E.I. Farmer</a>, 2005-2006
 
 <div class="updated">Last updated: 13 May 2006</div>
-<img src="img/xhtml.png" alt="Valid xhtml 1.0" />
-<img src="img/css.png" alt="Valid CSS" />
+<img src="/img/xhtml.png" alt="Valid xhtml 1.0" />
+<img src="/img/css.png" alt="Valid CSS" />
 </div>
 
 </div>
