--- a/linux/index.html
+++ b/linux/index.html
@@ -44,7 +44,7 @@ Linux is a free (in both senses of the word) operating system, and it's the one 
 Yep, sometimes I make themes for the various pieces of software I use or have used.  There's no reason not to share them, so here they are.
 </p>
 <ul>
-<li><a href="/fluxbox.html">Fluxbox styles</a></li>
+<li><a href="./fluxbox.html">Fluxbox styles</a></li>
 </ul>
 </div>
 
