--- a/math/index.html
+++ b/math/index.html
@@ -45,16 +45,16 @@ This page isn't designed to facilitate cheating, though I'm sure Professor Sally
 </p>
 
 <ul>
-<li><a href="/MATH207">MATH 20700</a> (Honors Analysis in <b>R</b><sup>n</sup> - I)</li>
-<li><a href="/MATH208">MATH 20800</a> (Honors Analysis in <b>R</b><sup>n</sup> - II)</li>
-<li><a href="/MATH209">MATH 20900</a> (Honors Analysis in <b>R</b><sup>n</sup> - III)</li>
-<li><a href="/MATH257">MATH 25700</a> (Honors Algebra - I)</li>
-<li><a href="/MATH258">MATH 25800</a> (Honors Algebra - II)</li>
-<li><a href="/MATH259">MATH 25900</a> (Honors Algebra - III)</li>
-<li><a href="/MATH262">MATH 26200</a> (Point-Set Topology)</li>
-<li><a href="/MATH263">MATH 26300</a> (Algebraic Topology)</li>
-<li><a href="/MATH270">MATH 27000</a> (Basic Complex Variables)</li>
-<li><a href="/CMSC277">CMSC 27700</a> (Mathematical Logic I)</li>
+<li><a href="./MATH207">MATH 20700</a> (Honors Analysis in <b>R</b><sup>n</sup> - I)</li>
+<li><a href="./MATH208">MATH 20800</a> (Honors Analysis in <b>R</b><sup>n</sup> - II)</li>
+<li><a href="./MATH209">MATH 20900</a> (Honors Analysis in <b>R</b><sup>n</sup> - III)</li>
+<li><a href="./MATH257">MATH 25700</a> (Honors Algebra - I)</li>
+<li><a href="./MATH258">MATH 25800</a> (Honors Algebra - II)</li>
+<li><a href="./MATH259">MATH 25900</a> (Honors Algebra - III)</li>
+<li><a href="./MATH262">MATH 26200</a> (Point-Set Topology)</li>
+<li><a href="./MATH263">MATH 26300</a> (Algebraic Topology)</li>
+<li><a href="./MATH270">MATH 27000</a> (Basic Complex Variables)</li>
+<li><a href="./CMSC277">CMSC 27700</a> (Mathematical Logic I)</li>
 </ul>
 
 <h2>Textbooks</h2>
