--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -41,9 +41,9 @@ I'm not really sure what this page is going to become.  For now, though, since I
 </p>
 
 <ol>
-<li><a href="/ssi.html">SSI: How to Create an Almost-dynamic Webpage</a></li>
-<li><a href="/harper-passwordless.html">Passwordless SSH logins to harper</a></li>
-<li><a href="/rsync-manage.html">Managing your website with rsync</a></li>
+<li><a href="./ssi.html">SSI: How to Create an Almost-dynamic Webpage</a></li>
+<li><a href="./harper-passwordless.html">Passwordless SSH logins to harper</a></li>
+<li><a href="./rsync-manage.html">Managing your website with rsync</a></li>
 </ol>
 </div>
 
