--- a/math/index.html
+++ b/math/index.html
@@ -9,7 +9,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="description" content="Mr. Farmer at the University of Chicago" />
 	<title>Jesse E. I. Farmer - Math</title>
-	<link rel="stylesheet" type="text/css" href="../farmerje.css" />
+	<link rel="stylesheet" type="text/css" href="/farmerje.css" />
 </head>
 <body>
 <div id="page">
