--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <li><a href="/tutorials">Tutorials</a></li>
 <li><a href="/latex">LaTeX</a></li>
 <li><a href="/linux">Linux</a></li>
-<li><a href="/resume.pdf">Resumé</a></li>
+<li><a href="/resume.pdf">Résumé</a></li>
 </ul>
 </div>
 
@@ -37,7 +37,7 @@
 
 <h2>Where am I?</h2>
 <p>
-You've stumbled across the homepage of Jesse Farmer.  I'm a current undergraduate at the <a href="http://www.uchicago.edu">University of Chicago</a> concentrating in <a href="http://math.uchicago.edu">mathematics</a>, though I have many varied (and contradictory, and confusing) interests. I am presently employed by <a href="http://nsit.uchicago.edu">NSIT</a>, within the Network Based Services division.  If you want more information about my professional and academic life, feel free to take a gander at my <a href="resume.pdf">resumé</a>.
+You've stumbled across the homepage of Jesse Farmer.  I'm a current undergraduate at the <a href="http://www.uchicago.edu">University of Chicago</a> concentrating in <a href="http://math.uchicago.edu">mathematics</a>, though I have many varied (and contradictory, and confusing) interests. I am presently employed by <a href="http://nsit.uchicago.edu">NSIT</a>, within the Network Based Services division.  If you want more information about my professional and academic life, feel free to take a gander at my <a href="resume.pdf">Résumé</a>.
 </p>
 <p>
 You can contact me via email at <a href="mailto&#058;farmerje&#064;uchicago&#046;edu">farmerje&#064;uchicago&#046;edu</a>, or if you're one of those cool kids you can IM me on AIM under the screen name <a href="aim:goim?screenname=farmerje">farmerje</a>.
