--- a/code/suffixes/index.html
+++ b/code/suffixes/index.html
@@ -28,7 +28,7 @@
 <li><a href="/tutorials">Tutorials</a></li>
 <li><a href="/latex">LaTeX</a></li>
 <li><a href="/linux">Linux</a></li>
-<li><a href="/resume.pdf">Resumé</a></li>
+<li><a href="/resume.pdf">Résumé</a></li>
 </ul>
 </div>
 
