--- a/math/MATH270/index.html
+++ b/math/MATH270/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <HTML>
- <HEAD>
+ <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-1586549-14"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-1586549-14');
+  </script>
+
   <TITLE>Index of math/MATH270</TITLE>
  </HEAD>
  <BODY>
