--- a/tutorials/rsync-manage.html
+++ b/tutorials/rsync-manage.html
@@ -6,6 +6,16 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-1586549-14"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-1586549-14');
+  </script>
+
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="description" content="Mr. Farmer at the University of Chicago" />
 	<title>Jesse E. I. Farmer - Tutorials - Managing your website with rsync</title>
@@ -116,11 +126,5 @@ Copyright &copy; <a href="mailto&#058;farmerje&#064;uchicago&#046;edu">Jesse E.I
 
 </div>
 
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
-<script type="text/javascript">
-_uacct = "UA-313699-1";
-urchinTracker();
-</script>
 </body>
 </html>
