--- a/code/suffixes/index.html
+++ b/code/suffixes/index.html
@@ -7,8 +7,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-1586549-14"></script>
-  <script>
+  <script async="async" type="text/javascript" src="https://www.googletagmanager.com/gtag/js?id=UA-1586549-14"></script>
+  <script type="text/javascript">
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
