--- a/math/MATH259/index.html
+++ b/math/MATH259/index.html
@@ -2,8 +2,8 @@
 <HTML>
  <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-1586549-14"></script>
-  <script>
+  <script async="async" type="text/javascript" src="https://www.googletagmanager.com/gtag/js?id=UA-1586549-14"></script>
+  <script type="text/javascript">
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
